--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,25 @@
-<h1 style="text-align:center">
-  Bienvenido a {{ title }}
-</h1>
+<!--el tittle al centro-->
+<h1 style="text-align:center">{{title}}</h1>
+<!--3 botones centrados en la pantalla-->
+<div style="text-align:center">
+  <button >EEUU</button>
+  <button style="margin-left:10px">PERU</button>
+  <button style="margin-left:10px">EUROPA</button>
 
+
+</div>
+<!--tipo de monedas en una etiqueta p debajo de cada boton-->
+<div style="text-align:center">
+  <h3>USD   PEN    EUR</h3>
+
+</div>
+
+<!--div con un formulario de cambio -->
+<div style="text-align:center">
+  <form>
+    <label for="fname">Moneda Bs:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="lname">Cambio:</label><br>
+    <input type="text" id="lname" name="lname"><br><br>
+    <input type="submit" value="Submit">
+  </form>
