--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   <h3>USD   PEN    EUR</h3>
 
 </div>
-
+<h1>Hola soy yo</h1>
 <!--div con un formulario de cambio -->
 <div style="text-align:center">
   <form>
