--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,12 +13,11 @@
   <h3>USD   PEN    EUR</h3>
 
 </div>
-<h1>Hola soy yo</h1>
-<!--div con un formulario de cambio -->
+
 <div style="text-align:center">
   <form>
     <label for="fname">Moneda Bs:</label><br>
-    <input type="text" id="fname" name="fname"><br>
+    <input type="text" id="fname" name="bol"><br>
     <label for="lname">Cambio:</label><br>
     <input type="text" id="lname" name="lname"><br><br>
     <input type="submit" value="Submit">
