--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,7 @@
 
 <div style="text-align:center">
   <form>
-    <label for="fname">Moneda Bs:</label><br>
-    <input type="text" id="fname" name="bol"><br>
+    <label for="fname">Moneda Bs:{{bol}}</label><br>
     <label for="lname">Cambio:</label><br>
-    <input type="text" id="lname" name="lname"><br><br>
-    <input type="submit" value="Submit">
+    <label>{{cambiar()}}</label>
   </form>
